@@ -1,1 +1,1 @@
-EXTRA_DIST = c.m4 gsl.m4 config.rpath install-sh depcomp missing texinfo.tex
+EXTRA_DIST = gsl.m4 config.rpath install-sh depcomp missing texinfo.tex
